# SistemasDistribuidos

Imagen/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  hello.cpp
video/copia/: CMakeLists.txt  video.cpp
video/cuda/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  preprocess.cpp  rgba_to_grey.cu  to_bw
video/mpi/: CMakeLists.txt  video.cpp
video/mpi2/: video.cpp
video/mpi3/: video.cpp
video/parAvg/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  video  video.cpp
video/rayos/: video.cpp
video/seqAvg/: CMakeCache.txt  Makefile  cmake_install.cmake  video  video.cpp
video/seqAvg (copia)/: video.cpp
