cmake_minimum_required(VERSION 2.8)
project( video )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( video video.cpp )
target_link_libraries( video ${OpenCV_LIBS} )

find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(video PUBLIC OpenMP::OpenMP_CXX)
endif()